--- a/backend/BaseApi/appsettings.json
+++ b/backend/BaseApi/appsettings.json
@@ -5,5 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlserver,1433;Database=BaseApi;User Id=sa;Password=Your_password123;TrustServerCertificate=True;"
+  },
+
+  "RabbitMq": {
+    "Host": "rabbitmq",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest",
+    "Queue": "fila_demo"
+  },
+
+  "Jwt": {
+    "Key": "minha_chave_secreta_muito_longa_minha_chave_secreta_muito_longa",
+    "Issuer": "https://localhost:44321/",
+    "Audience": "https://localhost:44321/",
+    "Expires": "60"
+  }
 }
