--- a/backend/BaseApi/Dockerfile
+++ b/backend/BaseApi/Dockerfile
@@ -1,4 +1,5 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
